
https://docs.netapp.com/us-en/bluexp-classification/task-exclude-scan-paths.html["En savoir plus >>"].



== 10 janvier 2024 (version 1.27)



=== Les résultats de la page d'enquête affichent désormais la taille totale en plus du nombre total d'éléments

Les résultats filtrés de la page Investigation affichent désormais la taille totale des éléments en plus du nombre total de fichiers. Cela peut vous aider lors du déplacement de fichiers, de la suppression de fichiers, etc.



=== Configurer des ID de groupe supplémentaires comme « ouvert à l'entreprise »

Vous pouvez désormais configurer les ID de groupe dans NFS pour qu'ils soient considérés comme « ouverts à l'entreprise » directement dans la classification BlueXP si le groupe n'avait pas été défini initialement avec cette autorisation. Tous les fichiers et dossiers auxquels ces ID de groupe sont joints s'affichent comme « Ouvrir à l'organisation » dans la page Détails de l'enquête. Découvrez comment https://docs.netapp.com/us-en/bluexp-classification/task-add-group-id-as-open.html["Ajouter des ID de groupe supplémentaires comme « ouvert à l'organisation »"].



== 14 décembre 2023 (version 1.26.6)

Cette version comprend quelques améliorations mineures.

La version a également temporairement supprimé les options suivantes :

* L'option permettant d'activer la collecte des journaux d'audit a été désactivée. Reportez-vous à la section link:task-manage-file-access-events.html["Contrôlez et gérez les événements d'accès aux fichiers"].
* Lors de l'enquête répertoires, l'option permettant de calculer le nombre de données d'informations personnelles identifiables (PII) par répertoires n'est pas disponible. Reportez-vous à la section link:task-investigate-data.html#filter-data-by-sensitivity-and-content["Examinez les données stockées dans votre organisation"].